# spacy-cli-reproducibility

./: Dockerfile  README.md  pyproject.toml
ner_demo/: predict.py
ner_demo/assets/: dev.json  train.json
