[tool.poetry]
name = "ner_testing_4"
version = "0.1.0"
description = ""
authors = ["Matias Ekkerhaugen <me31403@gk.no>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.5.0"
spacy-streamlit = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
